[tool.poetry]
name = "pycndl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "cndl"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
python-json-logger = "^2.0.2"
typer = "^0.4.0"
pandas = "^1.3.3"
google-cloud-storage = "^1.42.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"
mypy = "^0.910"
autoflake = "^1.4"
pytest = "^6.2.5"

[tool.poetry.scripts]
cndl = "cndl.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
